don't show departure stop name on mobile

--- a/app/component/itinerary.scss
+++ b/app/component/itinerary.scss
@@ -468,12 +468,6 @@ $itinerary-route-max-width: 420px;
   }
 }
 
-.mobile {
-  .itinerary-leg-first-row {
-    width: 90%;
-  }
-}
-
 .bp-large .row.itinerary-row .itinerary-instruction-column:not(.to)::after {
     left: 3px;
 }
@@ -800,8 +794,14 @@ div.itinerary-container-content {
   }
 
 .mobile {
+  .departure-stop {
+    display: none;
+  }
   .itinerary-leg-container {
     margin-left: 20%;
+  }
+  .itinerary-leg-first-row {
+    width: 90%;
   }
   .itinerary-row {
     width: 90%;
